# vectrix-graphs

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  langgraph.json  pyproject.toml
.github/workflows/: validations.yml
examples/: api_inference.html  api_inference.ipynb  llama3.2-vision.ipynb  local_inference.html  local_inference.ipynb  multi-model-embeddings.ipynb  process_streaming.ipynb  slack_data_ingest.ipynb  tutorial.ipynb  vector_operations.ipynb
examples/files/: arabic_test.docx
examples/full_code_examples/: llama-3.2-vision.ipynb  multi-model-embeddings.ipynb
src/searchflow/: __init__.py
src/searchflow/db/: vectordb.py
src/searchflow/extract/: ner.py
src/searchflow/graphs/: default_flow.py  default_llm_demo.py  local_slm_demo.py
src/searchflow/graphs/utils/: __init__.py  nodes.py
src/streamlit/: app.py
src/vectrix_graphs/: __init__.py  logger.py  main.py
src/vectrix_graphs/db/: __init__.py  docker-compose.yml  vectordb.py  weaviate.py
src/vectrix_graphs/extract/: documents.py  ner.py
src/vectrix_graphs/graphs/: base_nodes.py  default_flow.py  local_slm_demo.py  multi_modal_rag.py
src/vectrix_graphs/graphs/nodes/: multi_modal_rag.py
src/vectrix_graphs/graphs/utils/: __init__.py  nodes.py  state.py  stream_processor.py
src/vectrix_graphs/graphs/utils/handlers/: document_handler.py
src/vectrix_graphs/graphs/utils/models/: chain_factory.py  llm_factory.py  tools.py
src/vectrix_graphs/helpers/: pdf_to_image.py
src/vectrix_graphs/importers/: __init__.py  documents.py  email.py
src/vectrix_graphs/routers/: chat.py  models.py
src/vectrix_graphs/schemas/: openai.py
tests/vectrix_graphs/db/: _test_vectordb.py  temp_test_vectordb.py
tests/vectrix_graphs/importers/: test_documents.py  test_email.py
